# divine-rest-gateway

./: .dev.vars.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  wrangler.toml
.private-journal/2025-12-01/: 15-26-42-846290.embedding  15-26-42-846290.md
docs/: react-client-usage.md
docs/plans/: 2025-12-01-implementation-plan.md  2025-12-01-rest-gateway-design.md
src/: auth.rs  cache.rs  filter.rs  lib.rs  queue_consumer.rs  relay_pool.rs  router.rs  types.rs
tests/: integration_tests.rs
