[package]
name = "divine-rest-gateway"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.4"
worker-macros = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
js-sys = "0.3"
futures-util = "0.3"
wasm-bindgen = "0.2"

# Nostr
nostr = { version = "0.37", default-features = false, features = ["std"] }

[profile.release]
opt-level = "s"
lto = true
