[package]
name = "divine-rest-gateway"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ["queue"] }
worker-macros = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
js-sys = "0.3"
futures-util = "0.3"
wasm-bindgen = "0.2.106"

# Pure Rust crypto for WASM (secp256k1-sys won't compile to WASM)
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "schnorr", "sha256"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
opt-level = "s"
lto = true
